# frc-team-summary

./: README.md  main.py  pyproject.toml  team_summary.py
